Fix mobile page overflow

--- a/src/media-layout.css
+++ b/src/media-layout.css
@@ -894,7 +894,7 @@
   }
 
   .media-drawer {
-    width: 100vw;
+    width: 100%;
     padding: 58px 22px 28px;
   }
 
